Give some further context on copyright/license info and where to report issues

--- a/titaniumoxide.html
+++ b/titaniumoxide.html
@@ -51,9 +51,15 @@ Copyright (c) 2013-2015  Egon Willighagen <egon.willighagen@maastrichtuniversity
 </head>
 
 <body>
-  <h1>Titanium Dioxide</h1>
+  <h1>Titanium Dioxide (TiO2)</h1>
   <p><div id="summary"></div></p>
   <p><div id="workload"></div></p>
+  <p><div>Summary problems can be reported
+    <a href="https://github.com/enanomapper/enmSummaries/issues">here</a>;
+    issues with the data itself can be reported
+    <a href="https://github.com/enanomapper/data.enanomapper.net/issues">here</a>.
+    Copyright and license information for the various data bundles can be found
+    <a href="https://apps.ideaconsult.net/enanomapper/bundle">here</a>.</div></p>
   <table>
   <tr>
     <td width="400px">
