Escape the compound URI

--- a/titaniumoxide.html
+++ b/titaniumoxide.html
@@ -87,7 +87,7 @@ Copyright (c) 2013-2015  Egon Willighagen <egon.willighagen@maastrichtuniversity
 var searcher = new Ambit.Substance("https://apps.ideaconsult.net/enanomapper");
 
 compound = "https://apps.ideaconsult.net/enanomapper/compound/85/conformer/85"
-searcher.listForCompound(compound, processList);
+searcher.listForCompound(escape(compound), processList);
   </script>
 
   <script>
