--- a/copperoxide.html
+++ b/copperoxide.html
@@ -85,7 +85,9 @@ Copyright (c) 2013-2015  Egon Willighagen <egon.willighagen@maastrichtuniversity
   <script type="text/javascript">
 
 var searcher = new Ambit.Substance("https://apps.ideaconsult.net/enanomapper");  
-searcher.search("CuO", "name", processList);
+
+compound = "https://apps.ideaconsult.net/enanomapper/compound/72/conformer/72"
+searcher.listForCompound(compound, processList);
   </script>
 
   <script>
