--- a/titaniumoxide.html
+++ b/titaniumoxide.html
@@ -76,7 +76,10 @@ Copyright (c) 2013-2015  Egon Willighagen <egon.willighagen@maastrichtuniversity
   </table>
 
   <h3>All materials</h3>
-  <p><table id="table"></table></p>
+  <h4>PhysChem Data</h4>
+  <p><table id="tableP-CHEM"></table></p>
+  <h4>Toxicology Data</h4>
+  <p><table id="tableTOX"></table></p>
 
   <h3>JSON reply</h3>
   <p><div id="json">Nothing yet</div></p>
