--- a/titaniumoxide.html
+++ b/titaniumoxide.html
@@ -31,6 +31,7 @@ Copyright (c) 2013-2015  Egon Willighagen <egon.willighagen@maastrichtuniversity
   <title>Titanium Dioxide</title>
 
   <script type="text/javascript" src="lib/jquery-1.9.1.min.js"></script>
+  <script type="text/javascript" src="jquery.tablesorter.js"></script>
   <script type="text/javascript" src="lib/purl.js"></script>
   <script type="text/javascript" src="src/ambit.js"></script>
   <script type="text/javascript" src="src/Substance.js"></script>
@@ -48,6 +49,7 @@ Copyright (c) 2013-2015  Egon Willighagen <egon.willighagen@maastrichtuniversity
   </script>
 
   <link rel="stylesheet" type="text/css" href="theme.css">
+  <link rel="stylesheet" type="text/css" href="green/style.css" media="print, projection, screen" />
 </head>
 
 <body>
@@ -77,9 +79,9 @@ Copyright (c) 2013-2015  Egon Willighagen <egon.willighagen@maastrichtuniversity
 
   <h3>All materials</h3>
   <h4>PhysChem Data</h4>
-  <p><table id="tableP-CHEM"></table></p>
+  <p><table id="tableP-CHEM" class="tablesorter"></table></p>
   <h4>Toxicology Data</h4>
-  <p><table id="tableTOX"></table></p>
+  <p><table id="tableTOX" class="tablesorter"></table></p>
 
   <h3>JSON reply</h3>
   <p><div id="json">Nothing yet</div></p>
