--- a/titaniumoxide.html
+++ b/titaniumoxide.html
@@ -49,7 +49,7 @@ Copyright (c) 2013-2015  Egon Willighagen <egon.willighagen@maastrichtuniversity
   </script>
 
   <link rel="stylesheet" type="text/css" href="theme.css">
-  <link rel="stylesheet" type="text/css" href="green/style.css" media="print, projection, screen" />
+  <link rel="stylesheet" type="text/css" href="theme/green/style.css" media="print, projection, screen" />
 </head>
 
 <body>
@@ -79,9 +79,31 @@ Copyright (c) 2013-2015  Egon Willighagen <egon.willighagen@maastrichtuniversity
 
   <h3>All materials</h3>
   <h4>PhysChem Data</h4>
-  <p><table id="tableP-CHEM" class="tablesorter"></table></p>
+  <p><table id="tableP-CHEM" class="tablesorter">
+  <thead>
+    <tr>
+      <th>material label</th> 
+      <th>property</th> 
+      <th>provider</th> 
+      <th>source</th> 
+    </tr> 
+  </thead>
+  <tbody id="contentP-CHEM">
+  </tbody>
+  </table></p>
   <h4>Toxicology Data</h4>
-  <p><table id="tableTOX" class="tablesorter"></table></p>
+  <p><table id="tableTOX" class="tablesorter">
+  <thead>
+    <tr>
+      <th>material label</th> 
+      <th>property</th> 
+      <th>provider</th> 
+      <th>source</th> 
+    </tr> 
+  </thead>
+  <tbody id="contentTOX">
+  </tbody>
+  </table></p>
 
   <h3>JSON reply</h3>
   <p><div id="json">Nothing yet</div></p>
