Add table content with jQuery

--- a/titaniumoxide.html
+++ b/titaniumoxide.html
@@ -88,7 +88,7 @@ Copyright (c) 2013-2015  Egon Willighagen <egon.willighagen@maastrichtuniversity
       <th>source</th> 
     </tr> 
   </thead>
-  <tbody id="contentP-CHEM">
+  <tbody>
   </tbody>
   </table></p>
   <h4>Toxicology Data</h4>
@@ -101,7 +101,7 @@ Copyright (c) 2013-2015  Egon Willighagen <egon.willighagen@maastrichtuniversity
       <th>source</th> 
     </tr> 
   </thead>
-  <tbody id="contentTOX">
+  <tbody>
   </tbody>
   </table></p>
 
