Use the table ID with jquery and use the blue style

--- a/titaniumoxide.html
+++ b/titaniumoxide.html
@@ -49,7 +49,7 @@ Copyright (c) 2013-2015  Egon Willighagen <egon.willighagen@maastrichtuniversity
   </script>
 
   <link rel="stylesheet" type="text/css" href="theme.css">
-  <link rel="stylesheet" type="text/css" href="theme/green/style.css" media="print, projection, screen" />
+  <link rel="stylesheet" type="text/css" href="themes/blue/style.css" media="print, projection, screen" />
 </head>
 
 <body>
