--- a/titaniumoxide.html
+++ b/titaniumoxide.html
@@ -49,6 +49,7 @@ Copyright (c) 2013-2015  Egon Willighagen <egon.willighagen@maastrichtuniversity
   </script>
 
   <link rel="stylesheet" type="text/css" href="theme.css">
+  <link rel="stylesheet" type="text/css" href="css/theme.blue.css">
 </head>
 
 <body>
