Added the property category

--- a/copperoxide.html
+++ b/copperoxide.html
@@ -83,6 +83,7 @@ Copyright (c) 2013-2015  Egon Willighagen <egon.willighagen@maastrichtuniversity
   <thead>
     <tr>
       <th>material label</th> 
+      <th>category</th>
       <th>property</th> 
       <th>provider</th> 
       <th>source</th> 
@@ -96,6 +97,7 @@ Copyright (c) 2013-2015  Egon Willighagen <egon.willighagen@maastrichtuniversity
   <thead>
     <tr>
       <th>material label</th> 
+      <th>category</th>
       <th>property</th> 
       <th>provider</th> 
       <th>source</th> 
