Added the missing units

--- a/copperoxide.html
+++ b/copperoxide.html
@@ -65,9 +65,9 @@ Copyright (c) 2013-2015  Egon Willighagen <egon.willighagen@maastrichtuniversity
   <table>
   <tr>
     <td width="400px">
-      <h3>Sizes</h3>
+      <h3>Sizes (nm)</h3>
       <p><div class="sizes"></div></p><br />
-      <h3>Zeta Potentials</h3>
+      <h3>Zeta Potentials (mV)</h3>
       <p><div class="zetas"></div></p>
     </td>
     <td width="200px">
