--- a/silver.html
+++ b/silver.html
@@ -46,6 +46,7 @@ Copyright (c) 2013-2015  Egon Willighagen <egon.willighagen@maastrichtuniversity
     var zetaCount = 0;
 
     var materialNames = {};
+    var topCatCounts = {};
   </script>
 
   <link rel="stylesheet" type="text/css" href="theme.css">
@@ -73,6 +74,8 @@ Copyright (c) 2013-2015  Egon Willighagen <egon.willighagen@maastrichtuniversity
     <td width="200px">
       <h3>Providers</h3>
       <p><div class="chart"></div></p>
+      <h3>Properties</h3>
+      <p><div class="props"></div></p>
     </td>
   </tr>
   </table>
