Use data.enanomapper.net

--- a/silver.html
+++ b/silver.html
@@ -126,8 +126,8 @@ Copyright (c) 2013-2016  Egon Willighagen <egon.willighagen@maastrichtuniversity
   });
 
 
-var searcher = new Ambit.Substance("https://apps.ideaconsult.net/enanomapper");
-compound = "https://apps.ideaconsult.net/enanomapper/compound/71/conformer/71"
+var searcher = new Ambit.Substance("https://data.enanomapper.net");
+compound = "https://data.enanomapper.net/compound/71/conformer/71"
 searcher.listForCompound(compound, processList);
   </script>
 
