--- a/titaniumoxide.html
+++ b/titaniumoxide.html
@@ -126,8 +126,8 @@ Copyright (c) 2013-2016  Egon Willighagen <egon.willighagen@maastrichtuniversity
   });
 
 
-var searcher = new Ambit.Substance("https://apps.ideaconsult.net/enanomapper");
-compound = "https://apps.ideaconsult.net/enanomapper/compound/85/conformer/85"
+var searcher = new Ambit.Substance("https://data.enanomapper.net/");
+compound = "https://data.enanomapper.net/compound/85/conformer/85"
 searcher.listForCompound(compound, processList);
   </script>
 
