--- a/zincoxide.html
+++ b/zincoxide.html
@@ -125,9 +125,9 @@ Copyright (c) 2013-2016  Egon Willighagen <egon.willighagen@maastrichtuniversity
     sortList: [[0,0],[1,0]]
   });
 
-var searcher = new Ambit.Substance("https://apps.ideaconsult.net/enanomapper");
+var searcher = new Ambit.Substance("https://data.enanomapper.net");
 
-compound = "https://apps.ideaconsult.net/enanomapper/compound/77/conformer/77"
+compound = "https://data.enanomapper.net/compound/77/conformer/77"
 searcher.listForCompound(compound, processList);
   </script>
 
