--- a/copperoxide.html
+++ b/copperoxide.html
@@ -126,8 +126,8 @@ Copyright (c) 2013-2016  Egon Willighagen <egon.willighagen@maastrichtuniversity
   });
 
 
-var searcher = new Ambit.Substance("https://apps.ideaconsult.net/enanomapper");
-compound = "https://apps.ideaconsult.net/enanomapper/compound/72/conformer/72"
+var searcher = new Ambit.Substance("https://data.enanomapper.net");
+compound = "https://data.enanomapper.net/compound/72/conformer/72"
 searcher.listForCompound(compound, processList);
   </script>
 
