Default hide the JSON

--- a/copperoxide.html
+++ b/copperoxide.html
@@ -111,7 +111,8 @@ Copyright (c) 2013-2016  Egon Willighagen <egon.willighagen@maastrichtuniversity
   </table>
 
   <h3>JSON reply</h3>
-  <div id="json">Nothing yet</div>
+  <div onClick="$('#json').toggle()">Show/Hide</div>
+  <div style="display: none" id="json">Nothing yet</div>
 
   <!-- dynamically create a table with type information -->
   <script type="text/javascript">
