JSON is hidden by default

--- a/copperoxide.html
+++ b/copperoxide.html
@@ -111,7 +111,7 @@ Copyright (c) 2013-2016  Egon Willighagen <egon.willighagen@maastrichtuniversity
   </table>
 
   <h3>JSON reply</h3>
-  <div onClick="$('#json').toggle()">Show/Hide</div>
+  <div onClick="$('#json').toggle()">Click to Show/Hide</div>
   <div style="display: none" id="json">Nothing yet</div>
 
   <!-- dynamically create a table with type information -->
