--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-
+<h1>Engineered Nanomaterial Summariies</h1>
 <p>
   Summaries of data available in a eNanoMapper database instance. The
   HTML summary pages use the
@@ -12,12 +12,13 @@
   <a href="https://github.com/enanomapper/ambit.js/">ambit.js</a> client
   (<a href="https://github.com/enanomapper/ambit.js/releases/tag/v0.0.2">v0.0.2</a>).
 </p>
-
+<h3>Feature requests<h3>
 <p>
   Request further summary pages via the
   <a href="https://github.com/egonw/enmSummaries/issues">issue tracker</a>.
 </p>
 
+<h2>Summaries</h2>
 <ul>
   <li><p><a href="copperoxide.html">copper oxide</a></p></li>
   <li><p><a href="silver.html">silver</a></p></li>
