--- a/silver.html
+++ b/silver.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Silver</title>
+  <title>Silver nanomaterials (Ag) - Data Summary</title>
+  <meta  name="description"  content="Physicochemical and biological assay data for silver nanomaterials collected from various data sources."></meta>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <!--
 
