--- a/copperoxide.html
+++ b/copperoxide.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Copper Oxide</title>
+  <title>Copper Oxide nanomaterials (Cu) - Data Summaries</title>
+  <meta  name="description"  content="Physicochemical and biological assay data for copper oxide nanomaterials collected from various data sources."></meta>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <!--
 
