--- a/titaniumoxide.html
+++ b/titaniumoxide.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Titanium Dioxide</title>
+  <title>Titanium Dioxide nanomaterials (TiO2) - Data Summary</title>
+  <meta  name="description"  content="Physicochemical and biological assay data for titanium dioxide nanomaterials collected from various data sources."></meta>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <!--
 
