--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <a href="https://github.com/enanomapper/ambit.js/">ambit.js</a> client
   (<a href="https://github.com/enanomapper/ambit.js/releases/tag/v0.0.2">v0.0.2</a>).
 </p>
-<h3>Feature requests<h3>
+<h3>Feature requests</h3>
 <p>
   Request further summary pages via the
   <a href="https://github.com/egonw/enmSummaries/issues">issue tracker</a>.
