More impact clean up

--- a/zincoxide.html
+++ b/zincoxide.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Zinc Oxide nanomaterials (ZnO) - Data Summary</title>
-  <meta  name="description"  content="Physicochemical and biological assay data for zinc oxide nanomaterials collected from various data sources."></meta>
+  <meta  name="description"  content="Physicochemical (size, zeta potential) and biological and toxicology assay data for zinc oxide nanomaterials collected from various data sources."></meta>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <!--
 
@@ -64,6 +64,8 @@ Copyright (c) 2013-2016  Egon Willighagen <egon.willighagen@maastrichtuniversity
     <a href="https://github.com/enanomapper/data.enanomapper.net/issues">here</a>.
     Copyright and license information for the various data bundles can be found
     <a href="https://apps.ideaconsult.net/enanomapper/bundle">here</a>.</div>
+    
+  <h2>Overview</h2>
   <table>
   <tr>
     <td style="width:400px">
@@ -81,8 +83,7 @@ Copyright (c) 2013-2016  Egon Willighagen <egon.willighagen@maastrichtuniversity
   </tr>
   </table>
 
-  <h3>All materials</h3>
-  <h4>PhysChem Data</h4>
+  <h2>PhysChem Data</h2>
   <table id="tableP-CHEM" class="tablesorter">
   <thead>
     <tr>
@@ -96,7 +97,8 @@ Copyright (c) 2013-2016  Egon Willighagen <egon.willighagen@maastrichtuniversity
   <tbody>
   </tbody>
   </table>
-  <h4>Toxicology Data</h4>
+  
+  <h2>Toxicology Data</h2>
   <table id="tableTOX" class="tablesorter">
   <thead>
     <tr>
